@@ -5,16 +5,16 @@
 CXXFLAGS=$(CXXWARNINGS) $(CXXOPTIM) $(CPEDANTIC) $(INCLUDE1)
 LIBS=$(OTHERLIBS)
 
-OBJS=	IR.o IRBlockCache.o IRNativeAMD64.o
+OBJS=	IR.o IRBlockCache.o IRBackendAMD64.o IRBackend.o IRBackendPortable.o
 
-all: $(OBJS) IRNative.o
+all: $(OBJS)
 
 $(OBJS): Makefile
 
 # Special case without CPEDANTIC, since C++ gives warnings when
 # trying to call runtime generated code like this.
-IRNative.o: IRNative.cc Makefile
-	$(CXX) $(CXXWARNINGS) $(CXXOPTIM) $(INCLUDE1) IRNative.cc -c -o IRNative.o
+IRBackend.o: IRBackend.cc Makefile
+	$(CXX) $(CXXWARNINGS) $(CXXOPTIM) $(INCLUDE1) IRBackend.cc -c -o IRBackend.o
 
 clean:
 	rm -f $(OBJS) *core
